--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,4 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer base {
+    :root {
+        --background: 224 42% 100%;
+        --foreground: 224 69% 3%;
+        --muted: 344 7% 89%;
+        --muted-foreground: 344 12% 29%;
+        --popover: 224 42% 100%;
+        --popover-foreground: 224 69% 3%;
+        --card: 0 0% 99%;
+        --card-foreground: 224 69% 2%;
+        --border: 224 11% 95%;
+        --input: 224 11% 95%;
+        --primary: 224 92% 65%;
+        --primary-foreground: 0 0% 100%;
+        --secondary: 344 92% 65%;
+        --secondary-foreground: 344 0% 100%;
+        --accent: 224 63% 83%;
+        --accent-foreground: 104 0% 100%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 8 0% 100%;
+        --ring: 224 92% 65%;
+        --radius: 0.5rem;
+    }
+}
