feat(hero): add hero

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,13 +4,10 @@
 
 {% block body %}
 
-<div class="bg-blue-900">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="flex flex-col gap-16">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/Users/simonh/Dev/Lab/portfolio-sh/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/Users/simonh/Dev/Lab/portfolio-sh/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+        <twig:Hero/>
+
+        
+    </div>
 {% endblock %}
