--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -26,3 +26,17 @@
         --radius: 0.5rem;
     }
 }
+
+@layer components {
+    .btn {
+        @apply focus:ring-2 focus:ring-ring focus:ring-offset-2 font-medium rounded-lg px-5 py-2.5 me-2 focus:outline-none flex items-center gap-2;
+    }
+
+    .btn-primary {
+        @apply bg-primary text-primary-foreground hover:bg-primary/95;
+    }
+
+    .btn-outline {
+        @apply border-2 border-border hover:bg-card text-foreground/80;
+    }
+}
