--- a/templates/components/Hero.html.twig
+++ b/templates/components/Hero.html.twig
@@ -1,4 +1,5 @@
-<div class="container mx-auto min-h-[calc(100vh_-_73px)] lg:min-h-[calc(100vh_-_65px)] flex flex-col items-center gap-6 py-12 px-4 md:flex-row-reverse lg:gap-16">
+<section
+        class="container mx-auto min-h-[calc(100vh_-_73px)] lg:min-h-[calc(100vh_-_65px)] flex flex-col items-center gap-6 py-12 px-4 md:flex-row-reverse lg:gap-16">
     <img src="{{ asset('images/Simon2.png') }}"
          alt="simon"
          class="size-52 md:size-72 lg:size-80 rounded-full shadow-2xl shadow-primary/70"
@@ -43,4 +44,4 @@
             </a>
         </div>
     </div>
-</div>
+</section>
