feat(projects): create project draft

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,5 +22,70 @@
 
             </div>
         </twig:SectionLayout>
+
+        <twig:SectionLayout sectionTitle="Projets">
+            <div class="flex flex-col gap-4 md:flex-row md:justify-around">
+
+                <a href="#"
+                   class="flex flex-col bg-card text-card-foreground border border-border hover:shadow-sm max-w-[300px] rounded-lg grayscale hover:grayscale-0">
+                    <img src="https://cdn.statcdn.com/Infographic/images/normal/19063.jpeg" alt="image du projet"
+                         class="rounded-t-lg "/>
+
+                    <div class="px-4 py-8 space-y-2">
+                        <h5 class="font-bold text-xl uppercase">Nom du projet</h5>
+                        <p>description - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci beatae dicta
+                            dolore in ipsa ipsum non quae ullam, vero voluptatem.</p>
+                        <div class="flex gap-2 flex-wrap">
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#"
+                   class="flex flex-col bg-card text-card-foreground border border-border hover:shadow-sm max-w-[300px] rounded-lg grayscale hover:grayscale-0">
+                    <img src="https://cdn.statcdn.com/Infographic/images/normal/19063.jpeg" alt="image du projet"
+                         class="rounded-t-lg "/>
+
+                    <div class="px-4 py-8 space-y-2">
+                        <h5 class="font-bold text-xl uppercase">Nom du projet</h5>
+                        <p>description - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci beatae dicta
+                            dolore in ipsa ipsum non quae ullam, vero voluptatem.</p>
+                        <div class="flex gap-2 flex-wrap">
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#"
+                   class="flex flex-col bg-card text-card-foreground border border-border hover:shadow-sm max-w-[300px] rounded-lg grayscale hover:grayscale-0">
+                    <img src="https://cdn.statcdn.com/Infographic/images/normal/19063.jpeg" alt="image du projet"
+                         class="rounded-t-lg "/>
+
+                    <div class="px-4 py-8 space-y-2">
+                        <h5 class="font-bold text-xl uppercase">Nom du projet</h5>
+                        <p>description - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci beatae dicta
+                            dolore in ipsa ipsum non quae ullam, vero voluptatem.</p>
+                        <div class="flex gap-2 flex-wrap">
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+                            <twig:ux:icon name="devicon:typescript" class="size-8"/>
+
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </twig:SectionLayout>
     </div>
 {% endblock %}
