--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,8 @@
     {% block body %}{% endblock %}
 </div>
 
+<footer class="mt-12">footer</footer>
+
 {# TODO - à enlever en prod #}
 {# indicateur screen size #}
 <div class="fixed bottom-10 left-1 z-50 flex h-6 w-6 items-center justify-center rounded-full bg-gray-800 p-3 font-mono text-xs text-white">
