--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -39,4 +39,16 @@
     .btn-outline {
         @apply border-2 border-border hover:bg-card text-foreground/80;
     }
+
+    .alert {
+        @apply flex items-center p-4 mb-4 text-sm  border  rounded-lg;
+    }
+
+    .alert-success {
+        @apply text-green-800 border-green-300 bg-green-50;
+    }
+
+    .alert-danger {
+        @apply text-red-800 border-red-300 bg-red-50;
+    }
 }
