feat(admin): project with image

--- a/templates/admin/adminBase.html.twig
+++ b/templates/admin/adminBase.html.twig
@@ -17,7 +17,7 @@
 <body class="h-full bg-background text-foreground flex flex-col">
 
 
-<twig:Navbar :links="{}"/>
+<twig:Navbar :links="{Projets: '/admin/project', Technos: '/admin/technology'}"/>
 
 <div class="flex-1">
     <div class="container mx-auto my-4">
