--- a/templates/admin/project/edit.html.twig
+++ b/templates/admin/project/edit.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
 
     <div class="px-4 py-12 max-w-3xl m-auto">
-        <h1 class="text-2xl font bold mb-8">Nouveau projet</h1>
+        <h1 class="text-2xl font bold mb-8">{{ project.title }}</h1>
+
+        <img src="{{ vich_uploader_asset(project, 'imageFile') }}" alt="" class="w-full">
 
         {{ form_start(form) }}
         {{ form_rest(form) }}
