--- a/templates/admin/technology/index.html.twig
+++ b/templates/admin/technology/index.html.twig
@@ -6,7 +6,7 @@
 
 
 
-    <div class="relative overflow-x-auto container mx-auto my-12 max-w-3xl">
+    <div class="relative overflow-x-auto container mx-auto my-8 max-w-3xl p-4">
         <h1 class="text-2xl font-bold mb-8">Technologies</h1>
 
         <table class="w-full text-left text-sm">
