--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="sticky inset-x-0 top-0 z-50  backdrop-blur-sm">
     <div class="border-b border-accent bg-background/80">
         <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="#" class="flex items-center gap-2">
+            <a href="{{ path('home') }}" class="flex items-center gap-2">
                 <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo"/>
                 <span class="text-2xl font-semibold truncate">Simon Honoré</span>
             </a>
@@ -17,23 +17,14 @@
             </button>
             <div class="hidden w-full lg:block lg:w-auto" id="navbar-default">
                 <ul class="font-medium flex flex-col p-4 lg:p-0 mt-4 border border-border rounded-lg bg-card lg:flex-row lg:gap-8 lg:mt-0 lg:border-0 lg:bg-transparent">
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 rounded hover:text-primary lg:border-0 lg:p-0"
-                        >Présentation</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 rounded hover:text-primary lg:border-0 lg:p-0">Compétences</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 rounded hover:text-primary lg:border-0 lg:p-0">Projets</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 rounded hover:text-primary lg:border-0 lg:p-0">Contact</a>
-                    </li>
+                    {% for link, href in links %}
+                        <li>
+                            <a href="{{ href }}"
+                               class="block py-2 px-3 rounded hover:text-primary lg:border-0 lg:p-0"
+                            >{{ link }}</a>
+                        </li>
+                    {% endfor %}
+
                 </ul>
             </div>
         </div>
