--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProjectController!{% endblock %}
+{% block title %}Tous les projets{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/Users/simonh/Dev/Lab/portfolio-sh/src/Controller/ProjectController.php</code></li>
-        <li>Your template at <code>/Users/simonh/Dev/Lab/portfolio-sh/templates/project/index.html.twig</code></li>
-    </ul>
-</div>
+    <twig:SectionLayout sectionTitle="Tous les projets">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 py-8">
+            {% for project in projects %}
+                <twig:CardProject :project="project"/>
+            {% endfor %}
+        </div>
+    </twig:SectionLayout>
 {% endblock %}
