--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="sticky inset-x-0 top-0 z-50  backdrop-blur-sm">
+<nav class="fixed inset-x-0 top-0 z-50  backdrop-blur-sm">
     <div class="border-b border-accent bg-background/80">
         <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="{{ path('home') }}" class="flex items-center gap-2">
