--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -40,8 +40,8 @@
     </div>
 
     <div class="px-4 mt-12 pb-12 pt-8 bg-card">
-        <div class="md:container md:mx-auto md:max-w-5xl">
-            {{ project.description }}
+        <div class="md:container md:mx-auto md:max-w-5xl prose lg:prose-lg">
+            {{ project.description | markdown_to_html }}
         </div>
     </div>
 {% endblock %}
