--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,9 @@
 <twig:Navbar :links="{Présentation: '#', Compétences: '#', Projets: '#', Contact: '#'}"/>
 
 <div class="flex-1 mt-[65px] mt-[73px]">
+    <div class="container mx-auto my-4">
+        {% include 'partials/flash.html.twig' %}
+    </div>
     {% block body %}{% endblock %}
 </div>
 
