--- a/templates/components/SectionLayout.html.twig
+++ b/templates/components/SectionLayout.html.twig
@@ -1,6 +1,6 @@
-<section class="container mx-auto p-4 space-y-4">
+<section class="container mx-auto p-4 space-y-4" id="{{ sectionId ?? '' }}">
 
-    <h2 class="font-bold text-3xl bg-gradient-to-r from-primary to-purple-800 bg-clip-text text-transparent">
+    <h2 class="font-extrabold text-4xl w-fit bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">
         {{ sectionTitle }}
     </h2>
 
