--- a/templates/components/CardSkills.html.twig
+++ b/templates/components/CardSkills.html.twig
@@ -1,4 +1,5 @@
-<div{{ attributes }} class="border border-border bg-card text-card-foreground py-4 px-8 rounded-lg w-[300px] mx-auto">
+<div{{ attributes }}
+        class="border border-border bg-card text-card-foreground py-4 px-8 rounded-lg w-[300px] mx-auto">
     <h5 class="mb-2 text-2xl font-bold uppercase text-center opacity-80">
         {{ cardTitle }}
     </h5>
