--- a/templates/components/Hero.html.twig
+++ b/templates/components/Hero.html.twig
@@ -1,17 +1,17 @@
-<section
-        class="container mx-auto min-h-[calc(100vh_-_73px)] lg:min-h-[calc(100vh_-_65px)] flex flex-col items-center gap-6 py-12 px-4 md:flex-row-reverse lg:gap-16">
+<section id="hero"
+         class="container mx-auto min-h-[calc(100vh_-_73px)] lg:min-h-[calc(100vh_-_65px)] flex flex-col items-center gap-6 py-12 px-4 md:flex-row-reverse lg:gap-16">
     <img src="{{ asset('images/Simon2.png') }}"
          alt="simon"
          class="size-52 md:size-72 lg:size-80 rounded-full shadow-2xl shadow-primary/70"
     />
 
     <div class="flex flex-col gap-6">
-        <h1 class="text-6xl font-extrabold bg-gradient-to-r from-primary to-purple-800 bg-clip-text text-transparent drop-shadow-md">
+        <h1 class="text-6xl font-extrabold bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent drop-shadow-md text-center md:text-start md:text-8xl">
             Simon HONORÉ
         </h1>
 
         <div class="flex flex-col gap-1">
-            <p class="font-medium text-md text-foreground/80 text-justify">
+            <p class="font-medium text-md text-muted text-justify">
                 J’ai travaillé 10 années dans le commerce, à différents postes : vendeur, concepteur cuisine,
                 responsable de rayon. J’ai quitté ce métier afin de suivre ma conjointe suite à une mutation.
                 Codant déjà en autodidacte, j’ai saisi l'opportunité fourni par cette situation et entamé une
@@ -19,7 +19,9 @@
                 de cette passion.
             </p>
             <p class="font-medium text-md text-justify">
-                Je recherche une entreprise afin de réaliser une alternance d’un an en présentiel, au rythme de
+                Je recherche une entreprise afin de réaliser une alternance d’un an en présentiel en contrat
+                d'apprentissage avec l'école
+                MyDigitalSchool à Angers. Rythme de
                 1 semaine école / 2 semaines entreprise en vue d’obtenir le titre « Concepteur - Développeur
                 d’applications » (bac+3).
             </p>
@@ -34,11 +36,12 @@
                     <twig:ux:icon name="flowbite:linkedin-solid" class="size-6 text-primary"/>
                 </a>
             </div>
-            <a href="#" class="text-primary">Télécharger le CV</a>
+            <a href="{{ asset('images/SimonHonore.pdf') }}" download class="text-primary font-medium hover:underline">Télécharger
+                le CV</a>
         </div>
 
         <div class="flex justify-center">
-            <a href="#" class="btn btn-primary text-lg">
+            <a href="{{ path('home') }}#contact" class="btn btn-primary text-lg">
                 <twig:ux:icon name="mdi:email-send-outline" class="size-6"/>
                 Contactez-moi
             </a>
