fix: meta description & titles & mailing

--- a/templates/admin/project/edit.html.twig
+++ b/templates/admin/project/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/adminBase.html.twig' %}
 
-{% block title %}Nouveau projet{% endblock %}
+{% block title %}Éditer {{ project.title }}{% endblock %}
 
 {% block body %}
 
