--- a/templates/admin/technology/edit.html.twig
+++ b/templates/admin/technology/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/adminBase.html.twig' %}
 
-{% block title %}E&diter {{ technology.name }}{% endblock %}
+{% block title %}Éditer {{ technology.name }}{% endblock %}
 
 {% block body %}
 
