change icon, favicon, resume

--- a/templates/components/Hero.html.twig
+++ b/templates/components/Hero.html.twig
@@ -36,7 +36,8 @@
                     <twig:ux:icon name="flowbite:linkedin-solid" class="size-6 text-primary"/>
                 </a>
             </div>
-            <a href="{{ asset('images/SimonHonore.pdf') }}" download class="text-primary font-medium hover:underline">Télécharger
+            <a href="{{ asset('documents/SimonHonore.pdf') }}" download
+               class="text-primary font-medium hover:underline">Télécharger
                 le CV</a>
         </div>
 
