--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -2,7 +2,7 @@
     <div class="border-b border-accent bg-background/80">
         <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="{{ path('home') }}" class="flex items-center gap-2">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo"/>
+                <twig:ux:icon name="icon" class="size-8"/>
                 <span class="text-2xl font-semibold truncate">Simon Honoré</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button"
