--- a/templates/admin/adminBase.html.twig
+++ b/templates/admin/adminBase.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SH Admin - {% block title %}{% endblock %}</title>
     <link rel="icon"
-          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+          href="{{ asset('/icons/favicon.ico') }}">
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
     {% endblock %}
@@ -19,10 +19,12 @@
 
 <twig:Navbar :links="{Projets: '/admin/project', Technos: '/admin/technology', 'Se déconnecter': '/logout'}"/>
 
-<div class="flex-1 mt-[65px] mt-[73px]">
-    <div class="container mx-auto my-4">
-        {% include 'partials/flash.html.twig' %}
-    </div>
+<div class="flex-1 mt-[65px] mt-[73px] flex flex-col">
+    {% if app.flashes %}
+        <div class="container mx-auto my-4">
+            {% include 'partials/flash.html.twig' %}
+        </div>
+    {% endif %}
     {% block body %}{% endblock %}
 </div>
 
