--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,10 +19,12 @@
 
 <twig:Navbar :links="{Présentation: '/#hero', Compétences: '/#skills', Projets: '/#projects', Contact: '/#contact'}"/>
 
-<div class="flex-1 mt-[65px] mt-[73px]">
-    <div class="container mx-auto my-4">
-        {% include 'partials/flash.html.twig' %}
-    </div>
+<div class="flex-1 mt-[65px] mt-[73px] flex flex-col">
+    {% if app.flashes %}
+        <div class="container mx-auto my-4">
+            {% include 'partials/flash.html.twig' %}
+        </div>
+    {% endif %}
     {% block body %}{% endblock %}
 </div>
 
