--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="px-4 mt-12 py-12 bg-card">
+    <div class="px-4 mt-12 py-12 bg-primary flex-1">
         <div class="md:container md:mx-auto md:max-w-5xl prose lg:prose-lg">
             {% apply markdown_to_html %}
                 {% autoescape false %}
