--- a/templates/admin/project/edit.html.twig
+++ b/templates/admin/project/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="px-4 py-12 max-w-3xl m-auto">
+    <div class="px-4 py-12 max-w-3xl mx-auto w-full">
         <h1 class="text-2xl font bold mb-8">{{ project.title }}</h1>
 
         <img src="{{ vich_uploader_asset(project, 'imageFile') }}" alt="" class="w-full">
