--- a/templates/admin/technology/edit.html.twig
+++ b/templates/admin/technology/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="px-4 py-12 max-w-3xl m-auto">
+    <div class="px-4 py-12 max-w-3xl mx-auto w-full">
         <h1 class="text-2xl font bold mb-8">{{ technology.name }}</h1>
 
         {{ form_start(form) }}
