--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,11 +27,9 @@
 <twig:Navbar :links="{Présentation: '/#hero', Compétences: '/#skills', Projets: '/#projects', Contact: '/#contact'}"/>
 
 <div class="flex-1 mt-[65px] mt-[73px] flex flex-col">
-    {% if app.flashes %}
-        <div class="container mx-auto my-4">
-            {% include 'partials/flash.html.twig' %}
-        </div>
-    {% endif %}
+    <div class="container mx-auto">
+        {% include 'partials/flash.html.twig' %}
+    </div>
     {% block body %}{% endblock %}
 </div>
 
