--- a/templates/partials/flash.html.twig
+++ b/templates/partials/flash.html.twig
@@ -1,8 +1,8 @@
 {% for type, message in app.flashes %}
     {% if type == 'success' %}
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success my-4" role="alert">
     {% elseif type == 'danger' %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger my-4" role="alert">
         {% endif %}
         <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
              fill="currentColor" viewBox="0 0 20 20">
