feat: add legal notice and privacy policy

--- a/templates/components/Footer.html.twig
+++ b/templates/components/Footer.html.twig
@@ -1,13 +1,24 @@
 <footer class="bg-gray-800 text-gray-300 px-6 py-12">
-    <div class="max-w-screen-xl mx-auto flex  flex-col gap-4  justify-center md:flex-row-reverse md:items-center md:justify-between">
-        <div class="flex gap-6 justify-center">
-            <a href="https://github.com/Simon-Honore" class="hover:text-white">
-                <twig:ux:icon name="flowbite:github-solid" class="size-8"/>
+    <div class="max-w-screen-xl mx-auto space-y-6">
+        <div class="flex  flex-col gap-4  justify-center md:flex-row-reverse md:items-center md:justify-between">
+            <div class="flex gap-6 justify-center">
+                <a href="https://github.com/Simon-Honore" class="hover:text-white">
+                    <twig:ux:icon name="flowbite:github-solid" class="size-8"/>
+                </a>
+                <a href="https://www.linkedin.com/in/simon-honore/" class="hover:text-white">
+                    <twig:ux:icon name="flowbite:linkedin-solid" class="size-8"/>
+                </a>
+            </div>
+            <p class="text-center">© {{ "now" | date("Y") }} - Simon Honoré. Tous droits réservés</p>
+        </div>
+
+        <div class="flex flex-col gap-2 items-center text-sm md:flex-row md:gap-6 md:justify-end ">
+            <a href="{{ path('legal_notice') }}" class="hover:text-white">
+                mentions légales
             </a>
-            <a href="https://www.linkedin.com/in/simon-honore/" class="hover:text-white">
-                <twig:ux:icon name="flowbite:linkedin-solid" class="size-8"/>
+            <a href="{{ path('legal_policy') }}" class="hover:text-white">
+                politique de confidentialité
             </a>
         </div>
-        <p class="text-center">© {{ "now" | date("Y") }} - Simon Honoré. Tous droits réservés</p>
     </div>
 </footer>
