--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -28,8 +28,13 @@
                     <twig:CardProject :project="project"/>
                 {% endfor %}
             </div>
-            <a href="{{ path('project_index') }}" class="text-primary text-end block font-medium hover:underline">Voir
-                tous les projets -></a>
+
+            <div class="flex justify-end">
+                <a href="{{ path('project_index') }}" class="btn btn-outline text-primary w-fit">
+                    Voir tous les projets
+                    <twig:ux:icon name="ic:outline-read-more" class="size-6"/>
+                </a>
+            </div>
         </twig:SectionLayout>
 
         <div class="bg-primary/20 px-4 py-12" id="contact">
